added user authentication with validations

--- a/whatshot/Gemfile
+++ b/whatshot/Gemfile
@@ -1,5 +1,8 @@
 source 'https://rubygems.org'
 
+# Sorcery Authentication Gem
+gem 'sorcery'
+
 # Twitter Bootstrap Gems
 gem "therubyracer"
 gem "less-rails"
