--- a/whatshot/Gemfile
+++ b/whatshot/Gemfile
@@ -14,7 +14,16 @@ gem 'geocoder'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.1.4'
 # Use sqlite3 as the database for Active Record
-gem 'sqlite3'
+group :development do
+	gem 'taps'
+	gem 'rvm'
+	gem 'sqlite3'
+end
+
+group :production do
+	gem 'pg'
+	gem 'thin'
+end
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.3'
 # Use Uglifier as compressor for JavaScript assets
